# functional-trading

./: .gitignore  BenchEval.hs  ContractsDSL.hs  EvaluationEngine.hs  Main.hs  ModelUtils.hs  README.md  TestEvaluation.hs  contracts.hs  functional-trading.cabal  testSuite.hs
bench/: BenchEval.hs  CachingBench.hs  OptimisationBench.hs  ValuationEngineNoCache.hs
gui-client/: contract-evaluator.html  style.css
src/: ContractDefinitions.hs  ContractParser.hs  ContractVisualiser.hs  ContractsDSL.hs  EvaluationEngine.hs  EvaluationEngineNoCache.hs  GUI.hs  Main.hs  ModelUtils.hs  gui-front-end.html  style.css
src/gui-client/: gui-front-end.html  style.css
test/: TestEvaluation.hs  TestSuite.hs
