cabal-version: >=1.10
name: functional-trading
version: 0.1.0.0
build-type: Simple

library
    hs-source-dirs: src
    exposed-modules:
        ContractsDSL
        EvaluationEngine
        EvaluationEngineNoCache
        ModelUtils
        Main
        ContractParser
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        QuickCheck,
        mtl,
        deepseq,
        threepenny-gui >= 0.9,
        parsec,
        servant,
        servant-server,
        aeson,
        wai,
        warp,
        wai-cors,
        text,
        containers
    default-language: Haskell2010

executable functional-trading
    main-is: Main.hs
    hs-source-dirs: src
    ghc-options: -O2 -Wall
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        mtl,
        QuickCheck,
        deepseq,
        functional-trading,
        threepenny-gui >= 0.9,
        parsec,
        servant,
        servant-server,
        aeson,
        wai,
        warp,
        wai-cors,
        text,
        containers
    other-modules:
        ContractsDSL
        EvaluationEngine
        ModelUtils
        GUI
    default-language: Haskell2010

test-suite functional-trading-tests
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    hs-source-dirs: test
    ghc-options: -O2 -Wall
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        mtl,
        QuickCheck,
        tasty >=1.4,
        tasty-quickcheck >=0.10,
        tasty-hunit >=0.10,
        HUnit >=1.6,
        deepseq,
        functional-trading,
        parsec
    default-language: Haskell2010

benchmark caching
    type: exitcode-stdio-1.0
    main-is: CachingBench.hs
    hs-source-dirs: bench
    ghc-options: -O2 -Wall
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        mtl,
        QuickCheck,
        deepseq,
        criterion,
        random,
        functional-trading
    default-language: Haskell2010