cabal-version: >=1.10
name: functional-trading
version: 0.1.0.0
build-type: Simple

library
    hs-source-dirs: src src/library
    exposed-modules:
        ContractsDSL
        ValuationEngine
        ModelUtils
        Main
        ContractParser
        ContractVisualiser
        ContractDefinitions
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        QuickCheck,
        mtl,
        deepseq,
        threepenny-gui >= 0.9,
        parsec,
        servant,
        servant-server,
        aeson,
        wai,
        warp,
        wai-cors,
        text,
        containers
    default-language: Haskell2010

executable functional-trading
    main-is: Main.hs
    hs-source-dirs: src src/library
    ghc-options: -O2 -Wall
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        mtl,
        QuickCheck,
        deepseq,
        functional-trading,
        threepenny-gui >= 0.9,
        parsec,
        servant,
        servant-server,
        aeson,
        wai,
        warp,
        wai-cors,
        text,
        containers
    other-modules:
        ContractsDSL
        ValuationEngine
        ModelUtils
        ContractVisualiser
        ContractParser
        ContractDefinitions
    default-language: Haskell2010

test-suite functional-trading-tests
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    hs-source-dirs: test
    ghc-options: -O2 -Wall
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        mtl,
        QuickCheck,
        tasty >=1.4,
        tasty-quickcheck >=0.10,
        tasty-hunit >=0.10,
        HUnit >=1.6,
        deepseq,
        functional-trading,
        parsec
    default-language: Haskell2010

benchmark caching
    type: exitcode-stdio-1.0
    main-is: CachingBench.hs
    hs-source-dirs: bench
    ghc-options: -O2 -Wall
    build-depends:
        base >=4.14 && <5,
        time,
        containers,
        mtl,
        QuickCheck,
        deepseq,
        criterion,
        random,
        functional-trading
    other-modules:
        ValuationEngineNoCache
    default-language: Haskell2010